# esp8266-wifi-dev

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
lib/: libmain.remove
src/: exception_vectors.rs  main.rs  panic_handler.rs
src/bindings/: alloc.rs  esp_wifi.rs  mod.rs  user_interface.rs
src/ffi/: .clangd  Makefile  errno.c  esp_spiffs.c  esp_spiffs.h  hwrand.c  hwrand.h  lock.h  prelude.c  prelude.h  priv_err.h  spiffs.c  spiffs.h  spiffs_config.h  spiffs_nucleus.h  uart.h  wdev_regs.h
src/ffi/core/: abort.c  gpio_regs.h  interrupt.c  interrupt.cc  interrupt.h  misc.c  misc.h  rtc_regs.h  xtruntime.h
src/ffi/lwip/: _ip_addr.h  api.c  api.h  debug.h  def.h  err.c  err.h  errno.h  icmp6.h  igmp.h  inet.h  ip.h  ip4.h  ip6.h  ip_addr.c  ip_addr.h  ip_addr4.c  ip_addr4.h  ip_addr6.h  lwipopts.h  mem.c  mem.h  memp.c  memp.h  memp_std.h  netbuf.c  netbuf.h  netif.h  opt.h  pbuf.c  pbuf.h  prelude.h  priv_sockets.h  raw.h  sock_priv.h  sockets.c  sockets.h  stats.h  sys.h  tcp.h  (+4 more)
src/ffi/lwip/priv/: api_msg.h  tcp.h  tcpip.h
src/ffi/lwip/prot/: icmp.h  icmp6.h  ip.h  ip4.h  ip6.h  tcp.h  udp.h
src/ffi/newlib/: syscalls.c  syscalls.h
src/ffi/os/: config.h  corutine.h  list.c  list.h  mallinfo.c  mallinfo.h  port.c  port.h  portable.c  portable.h  queue.c  queue.h  semaphore.h  stack_macros.h  task.c  task.h  timers.h  xtensa_context.h
src/ffi/xtensa/: corebits.h  instructions.h
